[gd_scene load_steps=24 format=3 uid="uid://ds7sc1kim2t2x"]

[ext_resource type="Texture2D" uid="uid://cli0vcij3g7f2" path="res://Assets/Player/Treasure Hunter.png" id="1_6dc14"]
[ext_resource type="Script" uid="uid://kwcc2ww16is8" path="res://Player/player.gd" id="1_ucnkw"]
[ext_resource type="Script" uid="uid://c33plxph017bk" path="res://Player/Scripts/player_state_machine.gd" id="2_sysjd"]
[ext_resource type="Script" uid="uid://cml1dveox5pdo" path="res://Player/Scripts/animation_handler.gd" id="2_you5p"]
[ext_resource type="Script" uid="uid://cbkjnydmwdnan" path="res://Player/Scripts/States/state_idle.gd" id="5_ucnkw"]
[ext_resource type="Script" uid="uid://c4fqat2wc18fb" path="res://Player/Scripts/States/state_walk.gd" id="6_ine62"]
[ext_resource type="Script" uid="uid://dh6wj7j3n3en5" path="res://Player/Scripts/player_data.gd" id="7_ine62"]
[ext_resource type="Script" uid="uid://b0fc7qc42sjak" path="res://Player/Scripts/States/state_sprint.gd" id="8_od3ui"]
[ext_resource type="Script" uid="uid://v7s3omjba0ih" path="res://Player/Scripts/UI_handler.gd" id="9_00tjw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b30ri"]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id="Animation_27c8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_m5xj4"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_tt850"]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_dtqie"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_a00l3"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_you5p"]
resource_name = "walk_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(2, 1)]
}

[sub_resource type="Animation" id="Animation_ucnkw"]
resource_name = "walk_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_ine62"]
resource_name = "walk_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_hnwp3"]
resource_name = "walk_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sysjd"]
_data = {
&"RESET": SubResource("Animation_27c8n"),
&"idle_down": SubResource("Animation_m5xj4"),
&"idle_left": SubResource("Animation_tt850"),
&"idle_right": SubResource("Animation_dtqie"),
&"idle_up": SubResource("Animation_a00l3"),
&"walk_down": SubResource("Animation_you5p"),
&"walk_left": SubResource("Animation_ucnkw"),
&"walk_right": SubResource("Animation_ine62"),
&"walk_up": SubResource("Animation_hnwp3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vtle1"]
radius = 9.0
height = 44.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_od3ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00tjw"]
bg_color = Color(0.601014, 0.543181, 0.524581, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_ucnkw")

[node name="PlayerData" type="Node" parent="."]
script = ExtResource("7_ine62")
max_speed = 100.0
sprint_speed = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_b30ri")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sysjd")
}
script = ExtResource("2_you5p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6dc14")
hframes = 4
vframes = 4
frame = 14

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_sysjd")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_ucnkw")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("6_ine62")

[node name="Sprint" type="Node" parent="StateMachine"]
script = ExtResource("8_od3ui")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_vtle1")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_00tjw")

[node name="StaminaBar" type="ProgressBar" parent="PlayerUI"]
visible = false
texture_filter = 5
layout_mode = 0
offset_left = -17.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = -32.0
theme_override_styles/background = SubResource("StyleBoxEmpty_od3ui")
theme_override_styles/fill = SubResource("StyleBoxFlat_00tjw")
value = 20.0
show_percentage = false

[connection signal="body_entered" from="Area2D" to="StateMachine" method="_on_area_2d_body_entered"]
